--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,7 @@
 @import 'fonts.css';
 @import 'common.less';
 @import 'login.less';
+@import 'register.less';
 @import 'gettingStarted.less';
 @import 'calendar.less';
 @import 'swiper.less';
