--- a/app/modules/authentication/views/getstarted.html
+++ b/app/modules/authentication/views/getstarted.html
@@ -2,27 +2,57 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="row">
-			<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 pigyImage">
-				<div class="row">
-					<img src="assets/images/pigGettingStart.png">
-				</div>
-			</div>
-			<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 shadow"></div>
-			</div>
-		</div>
-		<div class="col-xs-12 getStartDesc">
-			<div class="row">
-				<h1>Get Started</h1>
-				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+				<div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 pigyImage">
 					<div class="row">
-						<p>Get your free risk assessment done first.Then, we'll guide through setting up an account.. Excited? You know we are!</p>
+						<img src="assets/images/riskassessmentMain.png">
 					</div>
 				</div>
 			</div>
+			<div class="col-xs-12 getStartDesc">
+				<div class="row">
+					<h1>Risk Assesment</h1>
+					<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+						<div class="row">
+							<p>Let's get started by asking you a few simple questions that will help us access your Risk Score.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="fin-btn-group">
+				<button class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>GO BACK</button>
+				<button class="fin-app-btn fin-orange" click-redirect="/riskAssesment">CONTINUE</button>
+			</div>
 		</div>
-		<div class="fin-btn-group">
-			<button class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>WAIT I WANT TO LEARN FIRST</button>
-			<button class="fin-app-btn fin-orange">CONTINUE</button>
+	</div>
+	<div class="bubble">
+	<p>Risk Assessment</p>
+		<div class="dot-cover">
+			<div class="dot">
+			</div>
+		</div>
+		<div class="dot-cover">
+			<div class="dot">
+			</div>
+		</div>
+		<div class="dot-cover">
+			<div class="dot">
+			</div>
+		</div>
+		<div class="dot-cover">
+			<div class="dot">
+			</div>
+		</div>
+		<div class="dot-cover">
+			<div class="dot">
+			</div>
+		</div>
+		<div class="dot-cover">
+			<div class="dot">
+			</div>
+		</div>
+		<div class="dot-cover">
+			<div class="dot">
+			</div>
 		</div>
 	</div>
 </div>
