--- a/app/modules/riskassesment/views/riskassesment.html
+++ b/app/modules/riskassesment/views/riskassesment.html
@@ -1,3 +1,3 @@
 <section class="swiper-outer-cover">
-	<swiper swiper-name="riskAssesment"></swiper>
+	<swiper swiper-name="riskAssesment1" result="resultObject" callback-fn="appendFormValues(data)" indicator-end="Assesment"></swiper>
 </section>
