--- a/less/swiper.less
+++ b/less/swiper.less
@@ -1,6 +1,7 @@
 .swiper-container {
     width: 100%;
     height: 450px;
+    transition:all 800ms ease;
     .bubble{
         display: flex;
         flex-direction:column;
@@ -8,7 +9,7 @@
         align-items:center;
         position:absolute;
         right: -7px;
-        top: 40%;
+        top: 180px;
         width:20px;
         z-index: 10;
     }
@@ -77,6 +78,7 @@
         }
       }  
       .swiper-content{
+        padding-bottom:10%;
         p{
           .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
           .PIXEL2EM(18);
@@ -108,13 +110,143 @@
           position:absolute;
           top:48%;
           transform:translateY(-48%);
-        }      
+        } 
+        &.content-6{
+          padding:1%;
+          padding-bottom:10%;
+          width:80%;
+          float:left;
+          .score-header{
+            padding:2.5%;
+            margin-top:1%;
+            border-radius: 24px;
+            background-color: rgb( 255, 255, 255 );
+            box-shadow: 1.5px 2.33px 8px -2px rgb( 36, 122, 188 );
+            .title-image-cover{
+              width:57%;
+              .time-image{
+                img{
+                  width:100%;
+                }
+              }
+              .point-range{
+                margin:0 auto;
+                border:1px solid #6da6d2;
+                width:70%;
+                margin-top:12px;
+                p{
+                .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@marinerapprox,normal);
+                .PIXEL2EM(20);
+                  text-align:center;
+                }
+              }
+            }
+            h3{
+              .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+              .PIXEL2EM(24);
+              margin-top:0px;
+              margin-bottom:8%;
+              span{
+                color:@flamingoapprox;
+              }
+            }
+            p.score{
+              .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@flamingoapprox,normal);
+              .PIXEL2EM(50);            
+            }
+            p.desc{
+              .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+              opacity:0.7;
+              .PIXEL2EM(16);
+              margin-bottom:2%;
+            }
+          }
+          .score-category{
+            padding-top:5%;
+            .score-cover{
+              padding-bottom:2%;
+              &:nth-child(2){
+                .time-image{
+                  img{
+                    width:70%;
+                  }
+                }
+              }
+            }
+            h3{
+              .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+              .PIXEL2EM(24);
+              opacity:0.6;
+            }
+            .time-image{
+              margin-top:20%;
+              img{
+                width:100%;
+              }
+            }
+            h4{
+              .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+              .PIXEL2EM(20);
+              span{
+                display:inline-block;
+                float:right;
+                line-height:16px;
+              }
+              margin-bottom:8%;
+            }
+            ul{
+              padding-left:6%;
+              li{
+                margin-bottom:2%;
+              }
+            }
+          }
+          p{
+            &.more-questions{
+              float:left;
+              margin-top:2%;
+              margin-bottom:3%;
+              .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+              .PIXEL2EM(30);
+            }
+          }
+        }   
+        h2{
+          .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+          .PIXEL2EM(18);
+          width:80%;
+          line-height:22px;
+          margin-bottom: 3%;
+          margin-top:0px;
+        }  
+
       }   
       .fin-btn-group{
-        z-index:1000;
-        width:34%;
-        position:absolute;
-        bottom:5%;
+        &.gotoPages{
+          z-index:1000;
+          width:34%;
+          position:absolute;
+          bottom:5%;
+        }
+        &.answer-more{
+           width:50%;
+           .fin-orange{
+            width:35%;
+            margin-right:5%;
+           }
+           .fin-white{
+            width:55%;
+           }
+           .fin-link-btn{
+            margin-top:5%;
+           }
+           &.addMargin{
+            margin-top:5%;
+            .fin-link-btn{
+              margin-top:0px;
+            }
+           }
+        }        
       } 
     }
 }
